--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "pdfkit": "^0.16.0"
+    "pdfkit": "^0.16.0",
+    "serverless-http": "^3.2.0"
   }
 }
