--- a/client/.gitignore
+++ b/client/.gitignore
@@ -22,3 +22,15 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+# Local env files
+.env
+.env.local
+.env.development.local
+.env.test.local         
+.env.production.local
+.env.development
+.env.test
+.env.production
+
