--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,4 +1,46 @@
-.env
+# Ignore node_modules (common for Node.js projects)
+node_modules/
 
-#node_modules
-node_modules
+# Ignore logs
+*.log
+
+# Ignore environment variables files
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+
+# Ignore OS generated files
+.DS_Store
+Thumbs.db
+
+# Ignore IDE/editor specific files and folders
+.vscode/
+.idea/
+
+# Ignore compiled binary files and folders
+bin/
+obj/
+dist/
+dist-ssr/
+
+# Ignore temporary files
+*.tmp
+*.swp
+
+# Ignore local debugging files
+debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Ignore Supabase local dev files
+**/supabase/.branches/
+**/supabase/.temp/
+
+# Ignore sensitive files
+*.pem
+*.key
