--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,36 +1,46 @@
-# Logs
-logs
+# Ignore node_modules (common for Node.js projects)
+node_modules/
+
+# Ignore logs
 *.log
+
+# Ignore environment variables files
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+
+# Ignore OS generated files
+.DS_Store
+Thumbs.db
+
+# Ignore IDE/editor specific files and folders
+.vscode/
+.idea/
+
+# Ignore compiled binary files and folders
+bin/
+obj/
+dist/
+dist-ssr/
+
+# Ignore temporary files
+*.tmp
+*.swp
+
+# Ignore local debugging files
+debug.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Ignore Supabase local dev files
+**/supabase/.branches/
+**/supabase/.temp/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-
-# Local env files
-.env
-.env.local
-.env.development.local
-.env.test.local         
-.env.production.local
-.env.development
-.env.test
-.env.production
-
+# Ignore sensitive files
+*.pem
+*.key
