--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "nodemailer": "^6.9.12",
     "pdfkit": "^0.16.0",
     "serverless-http": "^3.2.0"
+  },
+  "scripts": {
+    "dev": "node server.js",
+    "start": "node server.js"
   }
 }
